--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "author": "Alekseyua",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "cors": "^2.8.5",
+    "csv-parse": "^5.5.5",
+    "express": "^4.18.3",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
