--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
       "module": "commonjs",
+      "allowJs": true,  
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
       "target": "es6",
