--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Alekseyua",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -25,6 +26,8 @@
     "express": "^4.18.3",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
