--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "firebase-admin": "^12.0.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
