--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
   "author": "Alekseyua",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.11",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
@@ -33,11 +38,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.30",
     "nodemon": "^3.1.0",
     "pre-commit": "^1.2.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.3"
   }
 }
